# NIR_system_formal

./: README.md  UP2GITHUB.md
backup13/: CMakeLists.txt  README.md
backup13/plugins/calc/: CMakeLists.txt
backup13/plugins/predictor/: CMakeLists.txt  rf_predictor_plugin.cpp  svm_predictor_plugin.cpp
backup13/predictor_train/: README.md
backup13/predictor_train/rf_predictor/: CMakeLists.txt  README.md
backup13/predictor_train/svm_predictor/: onnx_example.cpp  requirements.txt  spectrum_predictor.py
backup13/src/: main.cpp  serial_communicator.h  spectrum_predictor_interface.h  spectrum_predictor_manager.cpp  spectrum_processor.cpp  udp_communicator.h  udp_receiver.cpp  udp_receiver.h
host_computer/: README.md  build_libtorch.sh
host_computer/plugins/: CMakeLists.txt
host_computer/plugins/calc/: add_plugin.cpp  mul_plugin.cpp
host_computer/plugins/predictor/: CMakeLists.txt  rf_predictor_plugin.cpp
host_computer/predictor_train/pytorch_predictor/: CMakeLists.txt  jit_predictor.py
host_computer/predictor_train/rf_predictor/: onnx_example.cpp  onnx_predictor.py  spectrum_predictor.py
host_computer/predictor_train/svm_predictor/: CMakeLists.txt
host_computer/qml/: Main.qml
host_computer/src/: log_manager.h  plugin_manager.cpp  spectrum_predictor_interface.h  spectrum_predictor_manager.cpp  spectrum_predictor_manager.h  spectrum_processor.h
main/: .build_onnxruntime.sh.swp  CMakeLists.txt  README.md  build_libtorch.sh  build_onnxruntime.sh
main/plugins/: CMakeLists.txt  README.md  sub_plugin.cpp
main/plugins/calc/: div_plugin.cpp
main/plugins/predictor/: pytorch_predictor_plugin.cpp  svm_predictor_plugin.cpp
main/predictor_train/: README.md
main/predictor_train/pytorch_predictor/: README.md  jit_example.cpp  requirements.txt  spectrum_model.jit  spectrum_predictor.py  test_input_data.txt
main/predictor_train/svm_predictor/: README.md  onnx_predictor.py
main/qml/: Main.qml
main/resources/: qml.qrc
main/src/: log_manager.cpp  main.cpp  plugin_interface.h  plugin_manager.h  reference_processor.cpp  reference_processor.h  serial_communicator.cpp  spectrum_file_manager.cpp  spectrum_file_manager.h  spectrum_processor.cpp  spectrum_processor.h  system_monitor.cpp  system_monitor.h  udp_communicator.cpp  udp_communicator.h
slave_device/C-T_optic_design_formal/: automatic_zemax_with_optimation_focal_v2.py  parameter.md
slave_device/optic_studio_study/: 光学系统的分析与评价.md  公差分析.md  初级像差理论及其矫正.md
slave_device/optic_studio_study/C-T_Struction_Example/: LENS.ZDA  LENS.zmx  LENS.zos  README.md
slave_device/optic_studio_study/C-T_design/: c-t光谱仪.md  compute_for_c-t.py  没用_compute_for_test_useless.py
slave_device/optic_studio_study/C-T_design_formal/: parameter.md
slave_device/optic_studio_study/C-T_design_theory/: compute.md
slave_device/optic_studio_study/C-T_design_theory_and_zemax/: LENS交叉型.zos  compute_for_test_backup.py  没用_compute.py
slave_device/optic_studio_study/automatic_zemax/: automatic_zemax.py  automatic_zemax_with_optimation.py  base0.py  just_compute.py
slave_device/optic_studio_study/zemax_structure_optimation/: main.md
slave_device/optic_studio_study/zemax_structure_optimation/test_example/: MF_for_global_optimisation.MF  MF_for_local_optimisation.MF  Mapping_Function_Resolution.ZPL  优化结果.zmx  光谱仪-理论模型.zmx  反射光栅-初始结构-抛物面镜.zmx  反射光栅-初始结构.zmx  离轴抛物面镜.zmx  透射光栅-初始结构.zmx  透射光栅-改进结构.zmx
slave_device/test_script/: line_display_break.py
